# lats

./: .env.example  .gitignore  CLAUDE.md  README.md  findings.md  progress.md  pyproject.toml  task_plan.md
.beads/: interactions.jsonl  issues.jsonl  metadata.json
.beads/hooks/: post-checkout  post-merge  pre-commit  pre-push
docs/: DESIGN.md
lats/: config.py  dataset.py  executor.py  generator.py  llm.py  mcts.py  node.py  parse.py  prompts.py  result.py  run_hotpotqa.py  run_lats.py  strategies.py
lats/hotpotqa/: __init__.py  agent.py  dataset.py  prompts.py  scoring.py  search.py  wikienv.py
lats/hotpotqa/data/: hotpotqa_sample.jsonl
tests/: test_executor.py  test_hotpotqa_dataset.py  test_hotpotqa_scoring.py  test_hotpotqa_search_mock.py  test_hotpotqa_wikienv.py  test_mcts_mock.py  test_node.py  test_parse.py  test_run_hotpotqa_cli.py  test_strategies_mock.py
